<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingScreen">
    <Button
        android:id="@+id/user_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/app_menu_user"
        android:drawableLeft="@drawable/user"
        android:paddingLeft="20dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/setting_btn"
        app:layout_constraintStart_toEndOf="@id/list_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="2dp"/>

    <Button
        android:id="@+id/list_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/list_icon"
        android:paddingLeft="20dp"
        android:text="@string/app_menu_list"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/user_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/setting_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/app_menu_config"
        android:drawableLeft="@drawable/setting_icon"
        android:paddingLeft="20dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/user_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="2dp"/>

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_login_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349" />

    <Button
        android:id="@+id/changelang_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_login_lang_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout_btn"
        app:layout_constraintVertical_bias="0.010" />
</androidx.constraintlayout.widget.ConstraintLayout>